# tezos

./: CHANGES.rst  active_protocol_versions
.gitlab/ci/test/: unit.yml
docs/: index.rst
docs/alpha/: event.rst  michelson.rst  transaction_rollups.rst
docs/developer/: proposal_testing.rst
docs/next/: cli-commands.rst  consensus.rst  glossary.rst  liquidity_baking.rst  michelson.rst  plugins.rst  precheck.rst  proof_of_stake.rst  protocol_overview.rst  sapling.rst  voting.rst
docs/protocols/: 013_next.rst  alpha.rst
manifest/: main.ml
scripts/yes-wallet/: yes_wallet.ml  yes_wallet_lib.ml
src/bin_client/: dune  tezos-client.opam
src/bin_codec/: dune  tezos-codec.opam
src/bin_node/: dune  tezos-node.opam
src/bin_proxy_server/: dune  main_proxy_server.ml  tezos-proxy-server.opam
src/lib_benchmark/: model.ml
src/lib_protocol_compiler/: final_protocol_versions
src/lib_protocol_environment/: tezos-protocol-environment.opam
src/lib_protocol_environment/test/: dune
src/lib_protocol_environment/test_shell_context/: test_proxy_context.ml
src/lib_proxy/: proxy_getter.ml  proxy_services.ml
src/lib_test/: assert.ml
src/proto_013_Pswf4gE3/bin_accuser/: dune  tezos-accuser-013-Pswf4gE3.opam
src/proto_013_Pswf4gE3/bin_baker/: dune  tezos-baker-013-Pswf4gE3.opam
src/proto_013_Pswf4gE3/bin_sc_rollup_client/: dune  tezos-sc-rollup-client-013-Pswf4gE3.opam
src/proto_013_Pswf4gE3/bin_sc_rollup_node/: dune  tezos-sc-rollup-node-013-Pswf4gE3.opam
src/proto_013_Pswf4gE3/bin_tx_rollup_node/: dune  tezos-tx-rollup-node-013-Pswf4gE3.opam
src/proto_013_Pswf4gE3/lib_benchmark/: dune  tezos-benchmark-013-Pswf4gE3.opam
src/proto_013_Pswf4gE3/lib_benchmark/lib_benchmark_type_inference/: dune  tezos-benchmark-type-inference-013-Pswf4gE3.opam
src/proto_013_Pswf4gE3/lib_benchmark/lib_benchmark_type_inference/test/: dune
src/proto_013_Pswf4gE3/lib_benchmark/test/: dune
src/proto_013_Pswf4gE3/lib_benchmarks_proto/: dune  tezos-benchmarks-proto-013-Pswf4gE3.opam
src/proto_013_Pswf4gE3/lib_client/: dune  tezos-client-013-Pswf4gE3.opam
src/proto_013_Pswf4gE3/lib_client/test/: dune
src/proto_013_Pswf4gE3/lib_client_commands/: dune  tezos-client-013-Pswf4gE3-commands-registration.opam  tezos-client-013-Pswf4gE3-commands.opam
src/proto_013_Pswf4gE3/lib_client_sapling/: dune  tezos-client-sapling-013-Pswf4gE3.opam
src/proto_013_Pswf4gE3/lib_delegate/: dune  tezos-accuser-013-Pswf4gE3-commands.opam  tezos-baking-013-Pswf4gE3-commands.opam  tezos-baking-013-Pswf4gE3.opam  tezos-endorser-013-Pswf4gE3-commands.opam
src/proto_013_Pswf4gE3/lib_delegate/test/: dune
src/proto_013_Pswf4gE3/lib_delegate/test/mockup_simulator/: dune
src/proto_013_Pswf4gE3/lib_delegate/test/tenderbrute/: dune
src/proto_013_Pswf4gE3/lib_delegate/test/tenderbrute/lib/: dune
src/proto_013_Pswf4gE3/lib_parameters/: dune  tezos-protocol-013-Pswf4gE3-parameters.opam
src/proto_013_Pswf4gE3/lib_plugin/: dune  tezos-protocol-plugin-013-Pswf4gE3-registerer.opam  tezos-protocol-plugin-013-Pswf4gE3-tests.opam  tezos-protocol-plugin-013-Pswf4gE3.opam
src/proto_013_Pswf4gE3/lib_plugin/test/: dune
src/proto_013_Pswf4gE3/lib_protocol/: TEZOS_PROTOCOL  dune-project  dune.inc  raw_context.ml  tezos-embedded-protocol-013-Pswf4gE3.opam  tezos-protocol-013-Pswf4gE3-tests.opam  tezos-protocol-013-Pswf4gE3.opam  tezos-protocol-functor-013-Pswf4gE3.opam
src/proto_013_Pswf4gE3/lib_protocol/test/helpers/: block.ml  context.ml  dune  liquidity_baking_machine.ml  tezos-013-Pswf4gE3-test-helpers.opam
src/proto_013_Pswf4gE3/lib_protocol/test/integration/: dune
src/proto_013_Pswf4gE3/lib_protocol/test/integration/consensus/: dune
src/proto_013_Pswf4gE3/lib_protocol/test/integration/gas/: dune
src/proto_013_Pswf4gE3/lib_protocol/test/integration/michelson/: dune  test_block_time_instructions.ml  test_sapling.ml  test_script_cache.ml
src/proto_013_Pswf4gE3/lib_protocol/test/integration/operations/: dune  test_tx_rollup.ml
src/proto_013_Pswf4gE3/lib_protocol/test/pbt/: dune
src/proto_013_Pswf4gE3/lib_protocol/test/unit/: dune
src/proto_013_Pswf4gE3/lib_sc_rollup/: dune  tezos-sc-rollup-013-Pswf4gE3.opam
src/proto_alpha/bin_sc_rollup_node/: commitment.ml  commitment.mli  daemon.ml  interpreter.ml  pvm.ml  store.ml
src/proto_alpha/bin_tx_rollup_node/: daemon.ml
src/proto_alpha/lib_benchmark/: michelson_samplers.ml
src/proto_alpha/lib_benchmarks_proto/: interpreter_benchmarks.ml  interpreter_workload.ml  sc_rollup_benchmarks.ml  script_typed_ir_size_benchmarks.ml  ticket_benchmarks.ml  translator_benchmarks.ml
src/proto_alpha/lib_client/: client_proto_context.ml  client_proto_context.mli  injection.ml  michelson_v1_error_reporter.ml  operation_result.ml  proxy.ml
src/proto_alpha/lib_client_commands/: client_proto_context_commands.ml
src/proto_alpha/lib_parameters/: default_parameters.ml
src/proto_alpha/lib_plugin/: plugin.ml
src/proto_alpha/lib_protocol/: TEZOS_PROTOCOL  alpha_context.ml  alpha_context.mli  apply.ml  apply_results.ml  apply_results.mli  carbonated_map.ml  contract_event_repr.ml  contract_event_repr.mli  dune.inc  michelson_v1_gas.ml  michelson_v1_gas.mli  michelson_v1_primitives.ml  operation_repr.ml  operation_repr.mli  raw_carbonated_map.ml  raw_carbonated_map.mli  raw_context.ml  sc_rollup_costs.ml  sc_rollup_costs.mli  sc_rollup_storage.ml  sc_rollup_storage.mli  script_interpreter.ml  script_interpreter.mli  script_interpreter_defs.ml  script_interpreter_logging.ml  script_interpreter_logging.mli  script_ir_translator.ml  script_ir_translator.mli  script_tc_errors.ml  script_tc_errors_registration.ml  script_typed_ir.ml  script_typed_ir.mli  (+25 more)
tests_python/client/: client.py
tests_python/tests_013/: protocol.py  test_nonce_seed_revelation.py  test_rpc.py
tests_python/tests_alpha/: protocol.py
tests_python/tools/: constants.py
tezt/_regressions/: run_views.out  sc_rollup_inbox.out  tx_rollup_client_submit_batch_invalid_rollup_address.out
tezt/lib_tezos/: client.ml  client.mli  proxy_server.ml
tezt/tests/: RPC_test.ml  events.ml  main.ml
(+524 files in other folders)
