(env (static (flags (:standard -ccopt -static))))

(executable
 (name main_baker_013_Pswf4gE3)
 (public_name tezos-baker-013-Pswf4gE3)
 (package tezos-baker-013-Pswf4gE3)
 (instrumentation (backend bisect_ppx))
 (libraries
  tezos-base
  tezos-protocol-013-Pswf4gE3
  tezos-client-013-Pswf4gE3
  tezos-client-commands
  tezos-baking-013-Pswf4gE3-commands
  tezos-stdlib-unix
  tezos-client-base-unix)
 (flags
  (:standard
   -open Tezos_base.TzPervasives
   -open Tezos_protocol_013_Pswf4gE3
   -open Tezos_client_013_Pswf4gE3
   -open Tezos_client_commands
   -open Tezos_baking_013_Pswf4gE3_commands
   -open Tezos_stdlib_unix
   -open Tezos_client_base_unix)))
