; build static executable with --profile static
(env
 (static (flags (:standard
                  -ccopt -static
                  -cclib "-lusb-1.0 -lhidapi-libusb -ludev"))))

(executable
 (name main_sc_rollup_node_013_Pswf4gE3)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-sc-rollup-node-013-Pswf4gE3)
 (libraries
            tezos-base
            tezos-client-base
            tezos-client-base-unix
            tezos-client-commands
            tezos-client-013-Pswf4gE3
            tezos-protocol-013-Pswf4gE3-parameters
            tezos-protocol-plugin-013-Pswf4gE3
            tezos-rpc
            tezos-rpc-http
            tezos-rpc-http-server
            tezos-sc-rollup-013-Pswf4gE3
            )
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_client_commands
                   -open Tezos_stdlib_unix
                   -open Tezos_client_base
                   -open Tezos_client_base_unix
                   -open Tezos_client_013_Pswf4gE3
                   -open Tezos_protocol_013_Pswf4gE3
                   -open Tezos_protocol_plugin_013_Pswf4gE3
                   -open Tezos_protocol_013_Pswf4gE3_parameters
                   -open Tezos_rpc
                   -open Tezos_sc_rollup_013_Pswf4gE3
                   )))
