opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "dune" { >= "2.0" }
  "tezos-base"
  "tezos-client-013-Pswf4gE3"
  "tezos-client-commands"
  "tezos-client-base-unix"
  "tezos-rpc-http"
  "tezos-rpc-http-server"
  "tezos-sc-rollup-013-Pswf4gE3"
  "tezos-protocol-013-Pswf4gE3"
  "tezos-baking-013-Pswf4gE3-commands"
  "data-encoding"
  "irmin"
  "irmin-pack"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Tezos/Protocol: Transaction rollup node binary"
