(library
 (name tezos_benchmarks_proto_013_Pswf4gE3)
 (public_name tezos-benchmarks-proto-013-Pswf4gE3)
 (instrumentation (backend bisect_ppx))
 (libraries
  str
  tezos-stdlib
  tezos-base
  tezos-error-monad
  tezos-protocol-013-Pswf4gE3-parameters
  tezos-benchmark
  tezos-benchmark-013-Pswf4gE3
  tezos-benchmark-type-inference-013-Pswf4gE3
  tezos-protocol-013-Pswf4gE3
  tezos-protocol-013-Pswf4gE3.raw
  tezos-crypto
  tezos-shell-benchmarks
  tezos-micheline
  tezos-013-Pswf4gE3-test-helpers
  tezos-sapling
  tezos-client-013-Pswf4gE3
  tezos-tooling
  tezos-protocol-environment)
 (library_flags (:standard -linkall))
 (flags
  (:standard
   -open Tezos_stdlib
   -open Tezos_base
   -open Tezos_base.TzPervasives
   -open Tezos_error_monad
   -open Tezos_benchmark
   -open Tezos_benchmark_013_Pswf4gE3
   -open Tezos_benchmark_type_inference_013_Pswf4gE3
   -open Tezos_protocol_013_Pswf4gE3
   -open Tezos_raw_protocol_013_Pswf4gE3
   -open Tezos_crypto
   -open Tezos_micheline
   -open Tezos_013_Pswf4gE3_test_helpers
   -open Tezos_client_013_Pswf4gE3)))
