(library
 (name tezos_client_013_Pswf4gE3)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-client-013-Pswf4gE3)
 (libraries tezos-base
            tezos-protocol-013-Pswf4gE3
            tezos-shell-services
            tezos-client-base
            tezos-mockup-registration
            tezos-proxy
            tezos-rpc
            tezos-signer-backends
            tezos-protocol-013-Pswf4gE3-parameters
            tezos-protocol-plugin-013-Pswf4gE3)
 (inline_tests)
 (preprocess (pps ppx_inline_test))
 (library_flags (:standard -linkall))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_protocol_013_Pswf4gE3
                   -open Tezos_protocol_plugin_013_Pswf4gE3
                   -open Tezos_protocol_013_Pswf4gE3_parameters
                   -open Tezos_rpc)))
