(library
 (name tezos_client_013_Pswf4gE3_commands)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-client-013-Pswf4gE3-commands)
 (libraries tezos-base
            tezos-stdlib-unix
            tezos-protocol-013-Pswf4gE3
            tezos-protocol-013-Pswf4gE3-parameters
            tezos-protocol-environment
            tezos-shell-services
            tezos-mockup
            tezos-mockup-registration
            tezos-mockup-commands
            tezos-client-base-unix
            tezos-client-013-Pswf4gE3
            tezos-client-commands
            tezos-rpc
            tezos-protocol-plugin-013-Pswf4gE3)
 (library_flags (:standard -linkall))
 (modules (:standard \ alpha_commands_registration))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_013_Pswf4gE3
                   -open Tezos_protocol_013_Pswf4gE3_parameters
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_013_Pswf4gE3
                   -open Tezos_client_commands
                   -open Tezos_rpc
                   -open Tezos_client_base_unix
                   -open Tezos_protocol_plugin_013_Pswf4gE3)))

(library
 (name tezos_client_013_Pswf4gE3_commands_registration)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-client-013-Pswf4gE3-commands-registration)
 (libraries tezos-base
            tezos-protocol-013-Pswf4gE3
            tezos-protocol-013-Pswf4gE3-parameters
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-013-Pswf4gE3
            tezos-client-commands
            tezos-client-013-Pswf4gE3-commands
            tezos-client-sapling-013-Pswf4gE3
            tezos-rpc
            tezos-protocol-plugin-013-Pswf4gE3)
 (library_flags (:standard -linkall))
 (modules alpha_commands_registration)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_013_Pswf4gE3
                   -open Tezos_protocol_013_Pswf4gE3_parameters
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_013_Pswf4gE3
                   -open Tezos_client_commands
                   -open Tezos_client_013_Pswf4gE3_commands
                   -open Tezos_client_sapling_013_Pswf4gE3
                   -open Tezos_rpc
                   -open Tezos_protocol_plugin_013_Pswf4gE3)))
