(library
 (name tezos_client_sapling_013_Pswf4gE3)
 (public_name tezos-client-sapling-013-Pswf4gE3)
 (instrumentation (backend bisect_ppx))
 (libraries
  tezos-base
  tezos-crypto
  tezos-stdlib-unix
  tezos-client-base
  tezos-signer-backends
  tezos-client-013-Pswf4gE3
  tezos-client-013-Pswf4gE3-commands
  tezos-protocol-013-Pswf4gE3
  tezos-protocol-013-Pswf4gE3.environment
  tezos-protocol-plugin-013-Pswf4gE3)
 (library_flags (:standard -linkall))
 (flags
  (:standard
   -open Tezos_base.TzPervasives
   -open Tezos_stdlib_unix
   -open Tezos_client_base
   -open Tezos_client_013_Pswf4gE3
   -open Tezos_client_013_Pswf4gE3_commands
   -open Tezos_protocol_013_Pswf4gE3
   -open Tezos_protocol_environment_013_Pswf4gE3
   -open Tezos_protocol_plugin_013_Pswf4gE3)))
