(library
 (name tezos_baking_013_Pswf4gE3)
 (public_name tezos-baking-013-Pswf4gE3)
 (instrumentation (backend bisect_ppx))
 (libraries
  tezos-base
  tezos-version
  tezos-protocol-013-Pswf4gE3
  tezos-protocol-plugin-013-Pswf4gE3
  tezos-protocol-environment
  tezos-shell-services
  tezos-client-base
  tezos-client-013-Pswf4gE3
  tezos-client-commands
  tezos-stdlib
  tezos-stdlib-unix
  tezos-shell-context
  tezos-context
  tezos-context.memory
  tezos-rpc-http-client-unix
  tezos-rpc
  tezos-rpc-http
  lwt-canceler
  lwt-exit)
 (library_flags (:standard -linkall))
 (flags
  (:standard
   -open Tezos_base.TzPervasives
   -open Tezos_protocol_013_Pswf4gE3
   -open Tezos_protocol_plugin_013_Pswf4gE3
   -open Tezos_shell_services
   -open Tezos_client_base
   -open Tezos_client_013_Pswf4gE3
   -open Tezos_client_commands
   -open Tezos_stdlib
   -open Tezos_stdlib_unix
   -open Tezos_shell_context
   -open Tezos_context
   -open Tezos_rpc
   -open Tezos_rpc_http))
 (modules (:standard \ Baking_commands Baking_commands_registration)))

(library
 (name tezos_baking_013_Pswf4gE3_commands)
 (public_name tezos-baking-013-Pswf4gE3-commands)
 (instrumentation (backend bisect_ppx))
 (libraries
  tezos-base
  tezos-protocol-013-Pswf4gE3
  tezos-stdlib-unix
  tezos-protocol-environment
  tezos-shell-services
  tezos-client-base
  tezos-client-013-Pswf4gE3
  tezos-client-commands
  tezos-baking-013-Pswf4gE3
  tezos-rpc)
 (library_flags (:standard -linkall))
 (flags
  (:standard
   -open Tezos_base.TzPervasives
   -open Tezos_protocol_013_Pswf4gE3
   -open Tezos_stdlib_unix
   -open Tezos_shell_services
   -open Tezos_client_base
   -open Tezos_client_013_Pswf4gE3
   -open Tezos_client_commands
   -open Tezos_baking_013_Pswf4gE3
   -open Tezos_rpc))
 (modules Baking_commands))

(library
 (name tezos_baking_013_Pswf4gE3_commands_registration)
 (public_name tezos-baking-013-Pswf4gE3-commands.registration)
 (instrumentation (backend bisect_ppx))
 (libraries
  tezos-base
  tezos-protocol-013-Pswf4gE3
  tezos-protocol-environment
  tezos-shell-services
  tezos-client-base
  tezos-client-013-Pswf4gE3
  tezos-client-commands
  tezos-baking-013-Pswf4gE3
  tezos-baking-013-Pswf4gE3-commands
  tezos-rpc)
 (library_flags (:standard -linkall))
 (flags
  (:standard
   -open Tezos_base.TzPervasives
   -open Tezos_protocol_013_Pswf4gE3
   -open Tezos_shell_services
   -open Tezos_client_base
   -open Tezos_client_013_Pswf4gE3
   -open Tezos_client_commands
   -open Tezos_baking_013_Pswf4gE3
   -open Tezos_baking_013_Pswf4gE3_commands
   -open Tezos_rpc))
 (modules Baking_commands_registration))
