(library
 (name tezos_protocol_plugin_013_Pswf4gE3)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-protocol-plugin-013-Pswf4gE3)
 (libraries tezos-base
            tezos-protocol-013-Pswf4gE3
            )
 (modules (:standard) \ Plugin_registerer)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_013_Pswf4gE3
                   )))

(library
 (name tezos_protocol_plugin_013_Pswf4gE3_registerer)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-protocol-plugin-013-Pswf4gE3-registerer)
 (libraries tezos-base
            tezos-embedded-protocol-013-Pswf4gE3
            tezos-protocol-plugin-013-Pswf4gE3
            tezos-shell)
 (modules Plugin_registerer)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_embedded_protocol_013_Pswf4gE3
                   -open Tezos_protocol_plugin_013_Pswf4gE3
                   -open Tezos_shell)))
