(library
 (name tezos_sc_rollup_013_Pswf4gE3)
 (public_name tezos-sc-rollup-013-Pswf4gE3)
 (instrumentation (backend bisect_ppx))
 (libraries
  tezos-base
  tezos-protocol-013-Pswf4gE3
  tezos-protocol-plugin-013-Pswf4gE3
  tezos-protocol-013-Pswf4gE3-parameters
  tezos-rpc)
 (inline_tests (flags -verbose))
 (preprocess (pps ppx_inline_test))
 (library_flags (:standard -linkall))
 (flags
  (:standard
   -open Tezos_base.TzPervasives
   -open Tezos_protocol_013_Pswf4gE3
   -open Tezos_protocol_plugin_013_Pswf4gE3
   -open Tezos_protocol_013_Pswf4gE3_parameters
   -open Tezos_rpc)))
