(library
 (name tezos_benchmark_type_inference_013_Pswf4gE3)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-benchmark-type-inference-013-Pswf4gE3)
 (libraries
  tezos-stdlib
  tezos-error-monad
  tezos-crypto
  tezos-micheline
  tezos-protocol-013-Pswf4gE3
  tezos-micheline-rewriting
  hashcons)
 (flags (:standard -open Tezos_stdlib
                   -open Tezos_error_monad
                   -open Tezos_micheline
                   -open Tezos_micheline_rewriting
                   -open Tezos_protocol_013_Pswf4gE3)))
