(tests
 (names test_michelson_v1_macros test_client_proto_contracts test_client_proto_context test_proxy)
 (libraries tezos-base
            tezos-micheline
            tezos-protocol-013-Pswf4gE3
            tezos-client-013-Pswf4gE3
            tezos-base-test-helpers
            tezos-test-helpers
            alcotest-lwt
            qcheck-alcotest)
 (package tezos-client-013-Pswf4gE3)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_micheline
                   -open Tezos_client_013_Pswf4gE3
                   -open Tezos_protocol_013_Pswf4gE3
                   -open Tezos_base_test_helpers
                   -open Lib_test)))
