(library
 (name tezos_013_Pswf4gE3_mockup_simulator)
 (public_name tezos-baking-013-Pswf4gE3.mockup-simulator)
 (libraries
  tezos-base
  tezos-protocol-013-Pswf4gE3
  tezos-client-013-Pswf4gE3
  tezos-client-commands
  tezos-baking-013-Pswf4gE3
  tezos-stdlib-unix
  tezos-client-base-unix
  tezos-protocol-013-Pswf4gE3-parameters
  tezos-mockup
  tezos-mockup-proxy
  tezos-mockup-commands
  tezos-baking-013-Pswf4gE3.tenderbrute)
 (flags
  (:standard
   -open Tezos_base.TzPervasives
   -open Tezos_protocol_013_Pswf4gE3
   -open Tezos_client_013_Pswf4gE3
   -open Tezos_client_commands
   -open Tezos_baking_013_Pswf4gE3
   -open Tezos_stdlib_unix
   -open Tezos_client_base_unix
   -open Tezos_protocol_013_Pswf4gE3_parameters
   -open Tezos_protocol_013_Pswf4gE3.Protocol)))
