(executable
 (name tenderbrute_main)
 (libraries
  tezos-base
  tezos-client-base
  tezos-client-013-Pswf4gE3
  tezos-protocol-013-Pswf4gE3
  tezos-baking-013-Pswf4gE3.tenderbrute)
 (link_flags (:standard -linkall))
 (flags
  (:standard
   -open Tezos_base.TzPervasives
   -open Tezos_base
   -open Tezos_client_base
   -open Tezos_client_013_Pswf4gE3
   -open Tezos_protocol_013_Pswf4gE3)))
