(library
 (name tezos_013_Pswf4gE3_test_helpers)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-013-Pswf4gE3-test-helpers)
 (libraries alcotest-lwt
            qcheck-alcotest
            tezos-test-helpers
            tezos-base
            tezos-micheline
            tezos-stdlib-unix
            tezos-shell-services
            tezos-protocol-environment
            tezos-protocol-013-Pswf4gE3
            tezos-protocol-013-Pswf4gE3-parameters
            tezos-client-013-Pswf4gE3
            tezos-protocol-plugin-013-Pswf4gE3)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_micheline
                   -open Tezos_stdlib_unix
                   -open Tezos_protocol_013_Pswf4gE3
                   -open Tezos_client_013_Pswf4gE3
                   -open Tezos_protocol_plugin_013_Pswf4gE3
                   -open Tezos_protocol_environment_013_Pswf4gE3
                   -open Tezos_shell_services)))
