(tests
 (package tezos-protocol-013-Pswf4gE3-tests)
 (names liquidity_baking_pbt
        saturation_fuzzing
        test_merkle_list
        test_gas_properties
        test_sampler
        test_script_comparison
        test_tez_repr
        test_tx_rollup_l2_encoding
        test_tx_rollup_l2_withdraw_storage
        test_sc_rollup_tick_repr
        refutation_game_pbt
        test_carbonated_map)
 (libraries tezos-base
            tezos-micheline
            tezos-client-013-Pswf4gE3
            tezos-test-helpers
            tezos-013-Pswf4gE3-test-helpers
            alcotest
            qcheck-alcotest
            tezos-benchmark
            tezos-benchmark-013-Pswf4gE3)
 (flags (:standard
          -open Tezos_base__TzPervasives
          -open Tezos_micheline
          -open Tezos_client_013_Pswf4gE3
          -open Tezos_protocol_013_Pswf4gE3
          -open Tezos_013_Pswf4gE3_test_helpers
          -open Tezos_benchmark_013_Pswf4gE3
          -open Tezos_benchmark_type_inference_013_Pswf4gE3)))
