(library
 (name tenderbrute)
 (public_name tezos-baking-013-Pswf4gE3.tenderbrute)
 (libraries
  data-encoding
  tezos-base
  tezos-base.unix
  tezos-protocol-013-Pswf4gE3
  tezos-client-base
  tezos-client-013-Pswf4gE3)
 (flags
  (:standard
   -open Data_encoding
   -open Tezos_base.TzPervasives
   -open Tezos_base
   -open Tezos_protocol_013_Pswf4gE3
   -open Tezos_client_base
   -open Tezos_client_013_Pswf4gE3)))
