(test
 (name main)
 (package tezos-protocol-013-Pswf4gE3-tests)
 (deps (glob_files contracts/*)
       (glob_files patched_contracts/*))
 (libraries alcotest-lwt
            tezos-base
            tezos-protocol-013-Pswf4gE3
            tezos-protocol-013-Pswf4gE3-parameters
            tezos-base-test-helpers
            tezos-013-Pswf4gE3-test-helpers

            tezos-client-013-Pswf4gE3
            tezos-micheline
            tezos-benchmark
            tezos-benchmark-013-Pswf4gE3)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_013_Pswf4gE3
                   -open Tezos_013_Pswf4gE3_test_helpers
                   -open Tezos_base_test_helpers

                   -open Tezos_client_013_Pswf4gE3
                   -open Tezos_micheline
                   -open Tezos_benchmark_013_Pswf4gE3
                   -open Tezos_benchmark_type_inference_013_Pswf4gE3)))
